changed name of build output to build-env

--- a/.env.build
+++ b/.env.build
@@ -1,6 +1,6 @@
 # env.development - dynamic
 #
-BUILD_DIR=build-build
-BASE=/sv-zeeltephp/build-build
-PUBLIC_ZEELTEPHP_BASE=/sv-zeeltephp/build-build/api/
+BUILD_DIR=build-env
+BASE=/sv-zeeltephp/build-env
+PUBLIC_ZEELTEPHP_BASE=/sv-zeeltephp/build-env/api/
 ZEELTEPHP_DATABASE_URL=wordpress://../wordpress-project/
