--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.18.0",
+		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"svelte": "^5.22.5",
+		"svelte": "^5.23.0",
 		"vite": "^6.2.1"
+	},
+	"dependencies": {
+		"@picocss/pico": "^2.0.6"
 	}
 }
