--- a/.env.dev
+++ b/.env.dev
@@ -2,5 +2,6 @@
 #
 BUILD_DIR=build-dev
 BASE=
-PUBLIC_ZEELTEPHP_BASE=http://localhost/sv-zeeltephp/static/api/
-ZEELTEPHP_DATABASE_URL=wordpress://../../../wordpress_test/wp-load.php
+PUBLIC_ZEELTEPHP_BASE=http://localhost/svelte-zeeltephp/static/api/
+ZEELTEPHP_DATABASE_URL=wordpress://../../../wordpress/wp-load.php
+#ZEELTEPHP_DATABASE_URL=mysql2://root@localhost/wordpress
