initial ZeeltePHP v0.0.9 (rc1)

--- a/.env.dev
+++ b/.env.dev
@@ -3,5 +3,5 @@
 BUILD_DIR=build-dev
 BASE=
 PUBLIC_ZEELTEPHP_BASE=http://localhost/svelte-zeeltephp/static/api/
-ZEELTEPHP_DATABASE_URL=wordpress://../../../wordpress/wp-load.php
-#ZEELTEPHP_DATABASE_URL=mysql2://root@localhost/wordpress
+ZEELTEPHP_DATABASE_URL=mysql2://root@localhost/test
+#ZEELTEPHP_DATABASE_URL=wordpress://../../../wordpress/wp-load.php
