--- a/.env.build
+++ b/.env.build
@@ -4,3 +4,5 @@ BUILD_DIR=build-env
 BASE=/svelte-zeeltephp/build-env
 PUBLIC_ZEELTEPHP_BASE=/svelte-zeeltephp/build-env/api/
 ZEELTEPHP_DATABASE_URL=wordpress://../wordpress-project/
+ZEELTEPHP_DATABASE_URL=mysql2://root@localhost/test
+VITE_LIB_BUILD=true
