--- a/package.json
+++ b/package.json
@@ -1,23 +1,59 @@
 {
-	"name": "sv-zeeltephp",
-	"private": true,
-	"version": "0.0.5",
-	"type": "module",
+	"name": "zeeltephp",
+	"version": "0.0.9",
+	"description": "tbd",
+	"license": "MIT",
+	"author": "Harry <derharry@me.com> (http://zeepress.at/derharry/)",
 	"scripts": {
 		"dev": "vite dev --mode dev",
-		"build": "vite build --mode build && ./zeeltephp-post-build.sh build",
-		"build.zp": "vite build --mode build.zp && ./zeeltephp-post-build.sh build.zp",
+		"build": "vite build --mode build && npm run prepack",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''"
+		"prepare": "svelte-kit sync || echo ''",
+		"prepack": "svelte-kit sync && svelte-package && bun run copyApi && publint",
+		"copyApi": "cpx 'static/api/**/*.{php,.htaccess}' 'dist/api' --includeEmptyDirs"
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*",
+		"dist/vite-plugin/zeeltephp-vite-plugin.js",
+		"dist/vite-plugin",
+		"dist/api",
+		"dist/zeeltephp",
+		"!dist/zplib"
+	],
+	"sideEffects": [
+		"**/*.css"
+	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		},
+		"./vite-plugin": {
+		  "types": "./dist/vite-plugin/zeeltephp-vite-plugin.d.ts",
+		  "import": "./dist/vite-plugin/zeeltephp-vite-plugin.js"
+		}
+	},
+	"peerDependencies": {
+		"svelte": "^5.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.16.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.20.5",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"svelte": "^5.26.2",
+		"@picocss/pico": "^2.1.1",
+		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"cpx": "^1.5.0",
+		"publint": "^0.3.2",
+		"svelte": "^5.0.0",
+		"typescript": "^5.3.2",
 		"vite": "^6.2.6"
 	},
-	"dependencies": {
-		"@picocss/pico": "^2.1.1"
-	}
+	"keywords": [
+		"svelte"
+	]
 }
