--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,5 @@
-# env.development - dynamic
-#
-BUILD_DIR=build-dev
+# env.dev - hardcoded
+BUILD_DIR=
 BASE=
 PUBLIC_ZEELTEPHP_BASE=http://localhost/svelte-zeeltephp/static/api/
 ZEELTEPHP_DATABASE_URL=mysql2://root@localhost/test
-#ZEELTEPHP_DATABASE_URL=wordpress://../../../wordpress/wp-load.php
