--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 # env.build - hardcoded
-BUILD_DIR=build-env
-BASE=/svelte-zeeltephp/build-env
-PUBLIC_ZEELTEPHP_BASE=/svelte-zeeltephp/build-env/api/
+BUILD_DIR=../test
+BASE=/test
+PUBLIC_ZEELTEPHP_BASE=/test/api/
 ZEELTEPHP__DATABASE_URL=wordpress://../wordpress-project/
 ZEELTEPHP_DATABASE_URL=mysql2://root@localhost/test
