path correction for rc1-test

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"dev": "vite dev --mode dev",
 		"build": "vite build --mode build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"prepack": "svelte-kit sync && svelte-package && npm run cleanup && npm run copyApi && publint",
+		"prepare": " npm run svelte-kit sync || echo ''",
+		"prepack": " npm run svelte-kit sync && npm run  svelte-package && npm run cleanup && npm run copyApi && publint",
 		"copyApi": "cpx 'static/api/**/*.{php,.htaccess}' 'dist/api' --includeEmptyDirs",
   		"cleanup": "npx del-cli ./dist/zplib",
 		"postinstall": "npm run prepack",
