--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "zeeltephp",
 	"version": "0.0.9.2",
 	"description": "tbd",
-	"license": "MIT",
+	"license": "MIT",	
+	"trustedDependencies": ["zeeltephp"],
 	"scripts": {
 		"dev": "vite dev --mode dev",
 		"build": "vite build --mode build",
@@ -41,11 +42,11 @@
 	"peerDependencies": {
 		"svelte": "^5.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.0"
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/package": "^2.0.0"
 	},
 	"devDependencies": {
 		"@picocss/pico": "^2.1.1",
-		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"cpx": "^1.5.0",
 		"publint": "^0.3.2",
