--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"typescript": "^5.3.2",
-		"vite": "^6.2.6",
-		"zeeltephp": "github:derharry/svelte-zeeltephp#vrc1"
+		"vite": "^6.2.6"
 	},
 	"keywords": [
 		"svelte"
