--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"dist-create": "npm run svelte-kit sync && npm run svelte-package && npm run dist-copy-api && npm run dist-cleanup",
 		"dist-cleanup": "npx del-cli ./dist/zplib && publint",
 		"dist-copy-api": "npx cpy-cli 'static/api/**/*.{php,.htaccess}' dist/api ",
-		"postinstall2": "npm run prepack"
+		"postinstall": "npm run dist-only",
+		"dist-only": "bunx del-cli static src *.json *.md *.config.js .svelte-kit .evn*"
 	},
 	"files": [
 		"dist",
