--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"dist-cleanup": "npx del-cli ./dist/zplib && publint",
 		"dist-copy-api": "npx cpy-cli 'static/api/**/*.{php,.htaccess}' dist/api ",
 		"postinstall": "npm run dist-only",
-		"dist-only": "bunx del-cli static src *.json *.md *.config.js .svelte-kit .evn*"
+		"dist-only": "bunx del-cli node_modules/zeeltephp/static src *.json",
+		"dist-bkp": " *.md *.config.js .svelte-kit .evn*"
 	},
 	"files": [
 		"dist",
