--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "zeeltephp",
-	"version": "0.1.0.2",
+	"version": "0.1.0.5",
 	"description": "tbd",
 	"license": "MIT",
 	"trustedDependencies": ["zeeltephp"],
@@ -15,7 +15,7 @@
 		"dist-cleanup": "npx del-cli ./dist/zplib && publint",
 		"dist-copy-api": "npx cpy-cli 'static/api/**/*.{php,.htaccess}' dist/api ",
 		"postinstall": "npm run dist-only",
-		"dist-only": "bunx del-cli ** !dist",
+		"dist-only": "npmnx del-cli * !dist .* ",
 		"dist-bkp": " *.md *.config.js .svelte-kit .evn*"
 	},
 	"files": [
