--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"dist-create": "npm run svelte-kit sync && npm run svelte-package && npm run dist-copy-api && npm run dist-cleanup",
 		"dist-cleanup": "npx del-cli ./dist/zplib && publint",
 		"dist-copy-api": "npx cpy-cli 'static/api/**/*.{php,.htaccess}' dist/api ",
-		"postinstall": "npm run dist-only && dist/vite-plugin/zp-post-install.js",
+		"postinstall": "npm run dist-only && bun run dist/vite-plugin/zp-post-install.js",
 		"dist-only": "npx del-cli * !dist !package.json",
 		"dist-bkp": " *.md *.config.js .svelte-kit .evn*"
 	},
