rc1.clean up and corrections

--- a/static/api/zeeltephp/.htaccess
+++ b/static/api/zeeltephp/.htaccess
@@ -1,5 +1,7 @@
+# Block ALL access to this directory and its files
+Deny from all
+
 # tbd
 # secure access to api folder 
 # only allow path/api/?xxx, 
 # but block all path/api/*
-# Enable rewrite engine
