--- a/package.json
+++ b/package.json
@@ -3,62 +3,55 @@
 	"version": "1.0.0",
 	"description": "Svelte-frontend, PHP-backend",
 	"license": "MIT",
-	"trustedDependencies": [
-		"zeeltephp"
-	],
+
 	"scripts": {
-		"dev": "vite dev --mode dev",
-		"build": "vite build --mode build",
+		"dev": "vite dev",
+		"build": "vite build && npm run prepack.org",
 		"preview": "vite preview",
-		"prepare": "npm run svelte-kit sync || echo ''",
-		"prepack.org": "npm run svelte-kit sync && npm run svelte-package && publint",
-		"prepack": "npm run zp-dist-Create && npm run zp-dist-CopyApi && npm run zp-dist-Cleanup && publint",
-		"zp-dist-Create": "npm run svelte-kit sync && npm run svelte-package",
-		"zp-dist-CopyApi": "npx cpy-cli 'static/api/**/*.{php,.htaccess}' dist/api",
-		"zp-dist-Cleanup": "npx del-cli ./dist/zplib",
-		"postinstall": "bun run dist/vite-plugin/zp-post-install.js"
+		"prepare": "svelte-kit sync || echo ''",
+		"prepack.org": "svelte-kit sync && svelte-package && npm run  publint",
+		"prepack": "npm run zp-01-create-dist && npm run zp-02-copy-distApi && npm run zp-03-cleanup-dist",
+		"zp-01-create-dist": "svelte-kit sync && svelte-package && publint",
+		"zp-02-copy-distApi": "npx cpy-cli './static/api/**/*.{php,.htaccess}' ./dist/api",
+		"zp-03-cleanup-dist": "npx del-cli ./dist/zplib"
 	},
 	"files": [
 		"dist",
 		"!dist/**/*.test.*",
 		"!dist/**/*.spec.*",
-		"!dist/zplib"
-	],
-	"exclude": [
-		"src/lib/zplib/**/*",
-		"src/lib/templates/**/*"
+		"!dist/zplib",
+		"!src/lib/zplib"
 	],
 	"sideEffects": [
 		"**/*.css"
 	],
+     "main": "./dist/index.js",
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
+			"svelte": "./dist/index.js",
+     		"import": "./dist/index.js"
 		},
 		"./vite-plugin": {
 			"types": "./dist/vite-plugin/zeeltephp-vite-plugin.d.ts",
 			"import": "./dist/vite-plugin/zeeltephp-vite-plugin.js"
-		},
-  		"./api*": "./dist/api/*",
-  		"./templates/*": "./dist/templates/*"
+		}
 	},
 	"peerDependencies": {
 		"svelte": "^5.0.0",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.20.7"
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/adapter-static": "^3.0.8"
 	},
 	"devDependencies": {
-		"@picocss/pico": "^2.1.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@sveltejs/package": "^2.3.11",
-		"svelte": "^5.28.2",
-		"typescript": "^5.8.3",
-		"vite": "^6.3.4",
-		"publint": "^0.3.12"
+		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"publint": "^0.3.2",
+		"svelte": "^5.0.0",
+		"typescript": "^5.3.2",
+		"vite": "^6.2.6"
 	},
 	"keywords": [
 		"svelte php adapter-static"
