--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
 	"version": "1.0.0",
 	"description": "Svelte-frontend, PHP-backend",
 	"license": "MIT",
-
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && npm run prepack.org",
+		"build": "vite build && npm run prepack",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"prepack.org": "svelte-kit sync && svelte-package && npm run  publint",
@@ -25,7 +24,7 @@
 	"sideEffects": [
 		"**/*.css"
 	],
-     "main": "./dist/index.js",
+	"main": "./dist/index.js",
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
@@ -33,7 +32,7 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js",
-     		"import": "./dist/index.js"
+			"import": "./dist/index.js"
 		},
 		"./vite-plugin": {
 			"types": "./dist/vite-plugin/zeeltephp-vite-plugin.d.ts",
@@ -55,5 +54,8 @@
 	},
 	"keywords": [
 		"svelte php adapter-static"
-	]
+	],
+	"dependencies": {
+		"@picocss/pico": "^2.1.1"
+	}
 }
