--- a/static/api/zeeltephp/.htaccess
+++ b/static/api/zeeltephp/.htaccess
@@ -1,2 +1,9 @@
 # Block ALL access to this directory and its files
-Deny from all
+<IfModule mod_authz_core.c>
+# Apache 2.4+
+    Require all denied
+</IfModule>
+<IfModule !mod_authz_core.c>
+# Apache 2.2 and earlier
+    Deny from all
+</IfModule>
